@@ -8,6 +8,16 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+L<Krang::FTP::Server> now logs properly in C<logs/krang.log>.
+[Daniel S. Sterling]
+
+=item *
+
+L<Krang::FTP::Server> only call binmode utf8 for templates, not for media.
+[Daniel S. Sterling]
+
+=item *
+
 C<story> is now passed to a top-level element's extension() and filename()
 methods. [Michael Peters]
 
